tests/errors/raise_wrong_type.dang
# raise requires a String! or Error!, not an Int
pub result = raise 42
